--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,9 +37,13 @@ jobs:
     needs: makeTagAndRelease
     runs-on: ubuntu-latest
     env:
-      DOCKER_IMAGE_NAME: kcj-25-10-24
+      DOCKER_IMAGE_NAME: kcj251024-0432
     steps:
       - uses: actions/checkout@v4
+      - name: application-secret.yml 생성
+        env:
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
+        run: echo "$APPLICATION_SECRET" > src/main/resources/application-secret.yml
       - name: Docker Buildx 설치
         uses: docker/setup-buildx-action@v2
       - name: 레지스트리 로그인
@@ -63,15 +67,8 @@ jobs:
             ghcr.io/${{ env.OWNER_LC }}/${{ env.DOCKER_IMAGE_NAME }}:latest
   deploy:
     runs-on: ubuntu-latest
-    env:
-      DOCKER_IMAGE_NAME: kcj-25-10-24
     needs: [ buildImageAndPush ]
     steps:
-      - name: set lower case owner name
-        run: |
-          echo "OWNER_LC=${OWNER,,}" >> ${GITHUB_ENV}
-        env:
-          OWNER: '${{ github.repository_owner }}'
       - name: AWS SSM Send-Command
         uses: peterkimzz/aws-ssm-send-command@master
         id: ssm
@@ -83,17 +80,8 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
-            # 새 이미지 다운로드
-            docker pull ghcr.io/${{ env.OWNER_LC }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-
-            # 기존 컨테이너 중지
+            docker pull ghcr.io/${{ env.OWNER_LC }}/app20250314:latest
             docker stop app1 2>/dev/null
-
-            # 기존 컨테이너 제거
             docker rm app1 2>/dev/null
-
-            # 새 이미지를 실행해서 새 컨테이너 생성
-            docker run -d --name app1 -p 8080:8080 ghcr.io/${{ env.OWNER_LC }}/${{ env.DOCKER_IMAGE_NAME }}:latest
-
-            # 기존 이미지 제거
+            docker run -d --name app1 -p 8080:8080 ghcr.io/${{ env.OWNER_LC }}/app20250314:latest
             docker rmi $(docker images -f "dangling=true" -q)
